Update to other correct api key

--- a/bvsdk_config_staging.json
+++ b/bvsdk_config_staging.json
@@ -1,1 +1,4 @@
-{"clientId":"conciergeapidocumentation","apiKeyConversations":"caB45h2jBqXFw1OE043qoMBD1gJC8EwFNCjktzgwncXY4"}
+{
+  "apiKeyConversations": "kuy3zj9pr3n7i0wxajrzj04xo",
+  "clientId": "apireadonlysandbox"
+}
